# jmunch-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
bench/nanobot/: gateway-off.toml  gateway-on.toml  nanobot.config.json  prompt.txt  run.sh
bench/nanobot/demo/: README.md  _common.sh  demo_server.py  left.sh  right.sh
configs/: brave-search.toml  fetch.toml  gateway.example.toml  github-codemunch.toml  github-docs.toml  jcodemunch.toml  jdatamunch.toml  jdocmunch.toml
src/jmunch_mcp/: meta.py  metrics.py  proxy.py  verbs.py
src/jmunch_mcp/cli/: dashboard.py
src/jmunch_mcp/gateway/: anthropic_route.py  config.py  context_window.py  handleify.py  openai_route.py  server.py  sse.py  tool_injection.py  upstreams.py
tests/: test_dashboard.py  test_meta.py  test_metrics.py  test_session_report.py  test_verbs.py
tests/gateway/: test_context_aware.py  test_models_passthrough.py  test_streaming.py  test_verb_loop_savings.py
